# pthash-rs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
examples/: example.rs
src/: backends.rs  build.rs  concrete.hpp  cpp-utils.hpp  encoders.rs  hashing.rs  lib.rs  minimality.rs  partitioned_phf.rs  single_phf.rs  structs.rs  utils.rs  workarounds.hpp
tests/: custom_hasher.rs  load.rs  partitioned_phf.rs  single_phf.rs
