[package]
name = "pthash"
version = "0.4.0"
edition = "2021"
description = "Rust bindings for PTHash"
rust-version = "1.83"

license = "GPL-3.0-or-later"

authors = [
    "Software Heritage developers <swh-devel@inria.fr>"
]
readme = "README.md"
homepage = "https://gitlab.softwareheritage.org/swh/devel/pthash-rs"
repository = "https://gitlab.softwareheritage.org/swh/devel/pthash-rs"
keywords = ["hashing", "mph", "mphf", "dictionary", "map"]
categories = ["compression", "api-bindings", "data-structures"]

[features]
default = ["default_minimalities", "default_encoders", "default_hash_sizes"]
check = ["dep:sux", "dep:thiserror"]
rayon = ["dep:rayon"]

# The following feature groups trigger instantiation of C++ template for their cartesian
# product. By default, these are 2 PHF types × 2 minimalities × 2 hash sizes × 3 encoders
# = 24 instances

# Minimalities
default_minimalities = ["minimal", "nonminimal"]
minimal = []
nonminimal = []

# Hash sizes
default_hash_sizes = ["hash64", "hash128"]
hash64 = []
hash128 = ["hash64"] # implementation of MurmurHash2_128 depends on MurmurHash2_64

# Encoders
default_encoders = ["dictionary_dictionary", "partitioned_compact", "elias_fano"]
dictionary_dictionary = []
partitioned_compact = []
elias_fano = []

[dependencies]
autocxx = "0.30.0"
cxx = "1.0"
log = "0.4.27"
sux = { version = ">= 0.7.0, < 0.9.0", optional = true }
rand = "0.9.1"
rayon = { version = "1.10.0", optional = true }
thiserror = { version = "2.0.12", optional = true }

[build-dependencies]
thiserror = "2.0.12"
autocxx-build = "0.30.0"
autocxx-engine = "0.30.0"
cxx-build = "1.0"

[dev-dependencies]
anyhow = "1.0.98"
rand = "0.9.1"
stderrlog = "0.6.0"
tempfile = "3.20.0"
cmake = "0.1.54"
target-triple = "0.1.4"

[[example]]
name = "example"
required-features = ["check"]

[package.metadata.docs.rs]
all-features = true
